# LearnQt4

./: .gitignore  CMakeLists.txt
ch05_CreatingCustomWidgets/Sec00_CustomizingQtWidgets/: HexSpinBox.cc  HexSpinBox.h  Sec00_CustomizingQtWidgets.pro  main.cc
ch05_CreatingCustomWidgets/Sec01_SubclassingQWidget/: IconEditor.cc  IconEditor.h  ReadMe.md  Sec01_SubclassingQWidget.pro  main.cc
ch05_CreatingCustomWidgets/Sec03_DoubleBuffering/: PlotSettings.cc  PlotSettings.h  Plotter.cc  Plotter.h  Sec03_DoubleBuffering.pro  main.cc  plotter.qrc
ch06_LayoutManagement/Sec00_LayingOutWidgetsOnAForm/: FindFileDialog.cc  FindFileDialog.h  Sec00_LayingOutWidgetsOnAForm.pro  main.cc
ch06_LayoutManagement/Sec01_StackedLayouts/: AdvancePage.cc  AdvancePage.h  AppearancePage.cc  AppearancePage.h  MailAndNewsPage.cc  MailAndNewsPage.h  PreferenceDialog.cc  PreferenceDialog.h  Sec01_StackedLayouts.pro  WebBrowserPage.cc  WebBrowserPage.h  main.cc
ch06_LayoutManagement/Sec02_Splitters/: MailClient.cc  MailClient.h  Sec02_Splitters.pro  main.cc
ch06_LayoutManagement/Sec03_ScrollingAreas/: IconEditor.cc  ReadMe.md  Sec03_ScrollingAreas.pro  main.cc
ch06_LayoutManagement/Sec04_DockWindowsAndToolbars/: MainWindow.cc  MainWindow.h  Sec04_DockWindowsAndToolbars.pro  iconeditor.qrc  main.cc
ch06_LayoutManagement/Sec05_MultipleDocumentInterface/: Editor.cc  Editor.h  MainWindow.cc  MainWindow.h  Sec05_MultipleDocumentInterface.pro  main.cc
ch07_EventProcessing/Sec00_ReimplementEventHandle/KeyboardEvent/: CodeEditor.cc  CodeEditor.h  KeyboardEvent.pro  MainWindow.cc  MainWindow.h  main.cc
ch07_EventProcessing/Sec00_ReimplementEventHandle/TimerEvent/: Ticker.cc  Ticker.h  TimerEvent.pro  main.cc
ch07_EventProcessing/Sec01_InstallingEventFilters/: Sec01_InstallingEventFilters.pro  main.cc
ch07_EventProcessing/Sec02_StayingResponsiveDuringInsensiveProcessing/: ReadMe.md
ch08_2DGraphics/: CMakeLists.txt
ch08_2DGraphics/Sec00_PaintingWithQPainter/: PaintingWidget.cc  PaintingWidget.h  Sec00_PaintingWithQPainter.pro  main.cc
ch08_2DGraphics/Sec01_CoordinateSystemTransformation/: CMakeLists.txt  OvenTimer.cc  OvenTimer.h  main.cc
ch0_QtCreator/HelloQt/: CMakeLists.txt  main.cpp
ch1_GettingStart/: CMakeLists.txt
ch1_GettingStart/HelloQt/: CMakeLists.txt  main.cc
ch2_CreatingDialogs/: CMakeLists.txt  ch2_CreatingDialogs.pro
ch2_CreatingDialogs/DynamicDialog/: DynamicDialog.pro  main.cc  ui_SortDialog.h
ch2_CreatingDialogs/FindDialog/: CMakeLists.txt  FindDialog.cc  FindDialog.h
ch2_CreatingDialogs/GotoCellDialog/: CMakeLists.txt  GoToCellDialog.cc  GoToCellDialog.h  GotoCellDialog.pro
ch2_CreatingDialogs/GotoCellDialog/forms/: GotoCellDialog.ui
ch2_CreatingDialogs/ShapeChangingDialog/: SortDialog.cc  SortDialog.h  main.cc
ch3_CreatingMainWindow/: CMakeLists.txt  ReadMe.me
ch3_CreatingMainWindow/SubclassingQMainWindow/: CMakeLists.txt  SubclassingQMainWindow.pro  cell.cc  cell.h  main.cc  mainwindow.cc  mainwindow.h  spreadsheet.cc  spreadsheet.h  spreadsheet.qrc
ch3_CreatingMainWindow/SubclassingQMainWindow/ch2_CreatingDialogs/BuiltinWidgetAndDialogClasses/: BuiltinWidgetAndDialogClasses.pro  main.cc
ch3_CreatingMainWindow/SubclassingQMainWindow/ch2_CreatingDialogs/DynamicDialog/: CMakeLists.txt  ReadMe.md
ch3_CreatingMainWindow/SubclassingQMainWindow/ch2_CreatingDialogs/DynamicDialog/forms/: SortDialog.ui
ch3_CreatingMainWindow/SubclassingQMainWindow/ch2_CreatingDialogs/FindDialog/: FindDialog.cc  FindDialog.h  main.cc
ch3_CreatingMainWindow/SubclassingQMainWindow/ch2_CreatingDialogs/GotoCellDialog/: GoToCellDialog.cc  GoToCellDialog.h  main.cc
ch3_CreatingMainWindow/SubclassingQMainWindow/ch2_CreatingDialogs/ShapeChangingDialog/: CMakeLists.txt  ReadMe.md  SortDialog.cc  SortDialog.h
ch3_CreatingMainWindow/SubclassingQMainWindow/ch2_CreatingDialogs/ShapeChangingDialog/forms/: SortDialog.ui
cmake/: LearnQtHelpers.cmake
